a new reset button

--- a/Color Changer/index.html
+++ b/Color Changer/index.html
@@ -9,16 +9,19 @@
 </head>
 
 <body>
-    <div id="columns">
-        <div id="text">
-            <h1 id="text">Text</h1>
-        </div>
+    <div class="text">
+        <h1 id="text">Text</h1>
+    </div>
 
-        <div id="buttons">
-            <button id="blue" onclick="blue()">Blue</button>
-            <button id="red" onclick="red()">Red</button>
-        </div>
+    <div class="buttons">
+        <button id="blue" onclick="blue()">Blue</button>
+        <button id="red" onclick="red()">Red</button>
+    </div>
+
+    <div class="reset">
+        <button id="reset" onclick="reset()">Reset</button>
     </div>
     <script src="js.js"></script>
 </body>
+
 </html>
