Added a new function and got rid of old ones

--- a/Color Changer/index.html
+++ b/Color Changer/index.html
@@ -14,12 +14,12 @@
     </div>
 
     <div class="buttons">
-        <button id="blue" onclick="blue()">Blue</button>
-        <button id="red" onclick="red()">Red</button>
+        <button id="blue" onclick="setTextColor('blue')">Blue</button>
+        <button id="red" onclick="setTextColor('red')">Red</button>
     </div>
 
     <div class="reset">
-        <button id="reset" onclick="reset()">Reset</button>
+        <button id="reset" onclick="setTextColor('black')">Reset</button>
     </div>
     <script src="js.js"></script>
 </body>
